[project]
name = "smart_load_image"
description = "A single custom node, Load Image (Smart), that addresses several shortcomings of ComfyUI's built-in image loaders. It includes: Base folder selector – choose between output and input; subfolder selector – lists single-level subfolders of the selected base folder; videos filtered out – the image list only shows files whose mimetype is an image; selection survives reloads – unlike the built-in Load Image (Outputs) node, the saved selection is preserved when a workflow is reloaded or refreshed."
version = "1.0.1"
license = "MIT" 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/aiark032025/comfyui_smart_load_image"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/aiark032025/comfyui_smart_load_image/wiki"
"Bug Tracker" = "https://github.com/aiark032025/comfyui_smart_load_image/issues"

[tool.comfy]
PublisherId = "aiark032025"
DisplayName = "Smart Load Image"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility